# QObject2TypeScript

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Worker.cpp  Worker.h  main.cpp
.github/workflows/: android.yml  ios.yml  macos.yml  windows.yml
